--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>valoeghese</groupId>
     <artifactId>strom</artifactId>
     <version>0.1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
